--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean": "rimraf dist es lib",
     "build:esm": "tsc --module esnext --target es2017 --outDir ./es",
     "build:cjs": "tsc --module commonjs --target es5 --outDir ./lib",
-    "build": "run-s build:esm build:cjs",
+    "prepack": "run-s build:esm build:cjs",
     "test": "karma start",
     "test:watch": "karma start --single-run=false --auto-watch",
     "test:debug": "karma start --browsers=Chrome --single-run=false --auto-watch --debug",
