fix: remove prepare and pretest

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "test": "karma start",
     "test:watch": "karma start --single-run=false --auto-watch",
     "test:debug": "karma start --browsers=Chrome --single-run=false --auto-watch --debug",
-    "coveralls": "cat ./test/coverage/lcov.info | coveralls",
-    "pretest": "rimraf ./test/coverage",
-    "prepare": "is-ci || husky install .husky"
+    "coveralls": "cat ./test/coverage/lcov.info | coveralls"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
